agregado greedy y correcciones en clases